--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^23.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
-    "i18next": "^23.11.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "tailwindcss": "^4.1.5",
-    "@tailwindcss/postcss": "^4.1.5",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^4.1.5",
     "vite": "^5.4.8"
   }
 }
